force-app/main/default/objects/Alumni_Registration__c/Alumni_Registration__c.object-meta.xml
<CustomObject>
    <label>Alumni Registration</label>
    <nameField>
        <label>SRN Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alumni Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>