force-app/main/default/objects/Alumni_Registration__c/fields/Confirm_Validation__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Validation</label>
    <type>Checkbox</type>
</CustomField>