force-app/main/default/objects/Alumni_Registration__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>India (+91)</fullName>
            </value>
            <value>
                <fullName>Australia (+61)</fullName>
            </value>
            <value>
                <fullName>Canada (+1)</fullName>
            </value>
            <value>
                <fullName>France (+33)</fullName>
            </value>
            <value>
                <fullName>Germany (+49)</fullName>
            </value>
            <value>
                <fullName>Japan (+81)</fullName>
            </value>
            <value>
                <fullName>New Zealand (+64)</fullName>
            </value>
            <value>
                <fullName>Russia (+7)</fullName>
            </value>
            <value>
                <fullName>Singapore (+65)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>