force-app/main/default/objects/Alumni_Registration__c/fields/Course_Pursued__c.field-meta.xml
<CustomField>
    <fullName>Course_Pursued__c</fullName>
    <label>Course Pursued</label>
    <length>225</length>
    <type>Text</type>
</CustomField>