force-app/main/default/objects/Alumni_Registration__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diploma in HR Analytics</fullName>
            </value>
            <value>
                <fullName>Master of Science in Artificial Intelligence</fullName>
            </value>
            <value>
                <fullName>Master of Science in Business Analytics</fullName>
            </value>
            <value>
                <fullName>Master of Science in Cloud Architecture and Security</fullName>
            </value>
            <value>
                <fullName>Master of Science in Cyber Security</fullName>
            </value>
            <value>
                <fullName>MBA in Business Analytics</fullName>
            </value>
            <value>
                <fullName>Post Graduate Diploma in Artificial Intelligence</fullName>
            </value>
            <value>
                <fullName>Post Graduate Diploma in Business Analytics</fullName>
            </value>
            <value>
                <fullName>Post Graduate Diploma in Cloud Architecture and Security</fullName>
            </value>
            <value>
                <fullName>Post Graduate Diploma in Cybersecurity</fullName>
            </value>
            <value>
                <fullName>Master of Business Administration in Finance</fullName>
            </value>
            <value>
                <fullName>Master of Business Administration in Health care Management</fullName>
            </value>
            <value>
                <fullName>Master of Business Administration in Human Resource</fullName>
            </value>
            <value>
                <fullName>Master of Business Administration in Marketing</fullName>
            </value>
            <value>
                <fullName>Master of Business Administration in Operations Management</fullName>
            </value>
            <value>
                <fullName>Ph.D in Management Studies</fullName>
            </value>
            <value>
                <fullName>Master of Business Administration</fullName>
            </value>
            <value>
                <fullName>Master of Business Administration in Banking and Insurance</fullName>
            </value>
            <value>
                <fullName>Master of Business Administration in Entrepreneurship</fullName>
            </value>
            <value>
                <fullName>Master of Business Administration in Strategic Leadership</fullName>
            </value>
            <value>
                <fullName>Ph.D in Biochemistry</fullName>
            </value>
            <value>
                <fullName>Bachelor of Science in Biochemistry and Microbiology</fullName>
            </value>
            <value>
                <fullName>Bachelor of Physiotherapy</fullName>
            </value>
            <value>
                <fullName>Master of Science in Biochemistry</fullName>
            </value>
            <value>
                <fullName>Bachelor of Science in Sports Science</fullName>
            </value>
            <value>
                <fullName>Bachelor of Science in Nutrition and Dietetics</fullName>
            </value>
            <value>
                <fullName>Bachelor of Science in Medical Laboratory Technology</fullName>
            </value>
            <value>
                <fullName>Bachelor of Science in Medical Radiology and Diagnostic Imaging</fullName>
            </value>
            <value>
                <fullName>Intensive Certificate Course (ICC) in Laser Assisted Hatching and Embryo Biopsy</fullName>
            </value>
            <value>
                <fullName>PGD in Clinical Embryology and Assisted Reproductive Technology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>