force-app/main/default/objects/Alumni_Registration__c/fields/SRN_Number__c.field-meta.xml
<CustomField>
    <fullName>SRN_Number__c</fullName>
    <formula>Name</formula>
    <label>SRN Number</label>
    <type>Text</type>
</CustomField>