force-app/main/default/objects/Alumni_Registration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Email__c</columns>
    <columns>Program__c</columns>
    <columns>Year_of_Graduation__c</columns>
    <columns>Confirm_Validation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>