force-app/main/default/objects/Alumni_Registration__c/listViews/Confirmed_Registration.listView-meta.xml
<ListView>
    <fullName>Confirmed_Registration</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Email__c</columns>
    <columns>Program__c</columns>
    <columns>Year_of_Graduation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Confirm_Validation__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Confirmed Registration</label>
</ListView>