force-app/main/default/objects/Alumni_Registration__c/listViews/Pending_Registration.listView-meta.xml
<ListView>
    <fullName>Pending_Registration</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Email__c</columns>
    <columns>Program__c</columns>
    <columns>Year_of_Graduation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Confirm_Validation__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Pending Registration</label>
</ListView>